--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@nestjs/graphql": "^11.0.6",
     "@nestjs/platform-express": "^8.0.0",
     "@prisma/client": "^4.14.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "graphql": "^16.6.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
