--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/graphql": "^11.0.6",
     "@nestjs/platform-express": "^8.0.0",
     "@prisma/client": "^4.14.0",
+    "argon2": "^0.30.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "graphql": "^16.6.0",
